@@ -57,6 +57,7 @@ notes = "
 Additions and changes:
 - add 1 new references data dictionnaries related to extensions:
   imagick
+- add clear-cache sub-command to CLI version
 - upgrade xcache reference to version 3.0.0
 
 Bug fixes:
